fix theme switch color on iOS

--- a/assets/css/2-components/15-theme-switch.css
+++ b/assets/css/2-components/15-theme-switch.css
@@ -5,7 +5,7 @@
 
 .theme-button--dark {
 	display: inline-flex;
-	background-color: hsl(226 232 240);
+	background-color: rgb(226 232 240);
 }
 
 @media (prefers-color-scheme: light) {
